--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <header class="header">
         <a href="#" class="logo">Portfolio</a>
 
+        <i class='bx bx-menu' id="menu-icon"></i>
+
         <nav class="navbar">
             <a href="#home" class="active">Home</a>
             <a href="#about">About</a>
@@ -19,6 +21,27 @@
             <a href="#contact">Contact</a>
         </nav>
     </header>
+
+    <section class="home" id="home">
+        <div class="home-content">
+            <h3>Hello, It's Me</h3>
+            <h1>Adam Sadulaev</h1>
+            <h3>And I'm a <span>Full Stack Developer</span></h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing 
+                elit. Quidem, consequuntur accusamus quas deleniti dolorum totam
+                libero id sit amet!</p>
+            <div class="social-media">
+                <a href="#"><i class='bx bxl-facebook'></i></a>
+                <a href="#"><i class='bx bxl-linkedin' ></i></a>
+                <a href="#"><i class='bx bxl-instagram' ></i></a>
+            </div>
+            <a href="#" class="btn">Download CV</a>
+        </div>
+        <div class="home-img">
+            <img src="img/about-1.png" alt="home img shoud be here">
+        </div>
+    </section>
+
     <script src="js/index.js"></script>
 </body>
 </html>
