--- a/index.html
+++ b/index.html
@@ -42,6 +42,24 @@
         </div>
     </section>
 
+    <section class="about" id="about">
+        <div class="about-img">
+            <img src="img/about.png" alt="about img">
+        </div>
+
+        <div class="about-content">
+            <h2 class="heading">About <span>Me</span></h2>
+            <h3>Frontend Developer</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                Hic nisi quia quas neque provident aut debitis porro sunt. 
+                Ducimus eveniet minima obcaecati nihil nulla perferendis 
+                modi, voluptatibus quam a provident eos recusandae vitae 
+                dolorum facilis? Totam earum corrupti molestias vitae sint 
+                eaque optio eveniet laboriosam voluptatibus.</p>
+            <a href="#" class="btn">Read More</a>
+        </div>
+    </section>
+
     <script src="js/index.js"></script>
 </body>
 </html>
