--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <section class="about" id="about">
         <div class="about-img">
-            <img src="img/about.png" alt="about img">
+            <img src="img/about-2.png" alt="about img">
         </div>
 
         <div class="about-content">
