--- a/index.html
+++ b/index.html
@@ -60,6 +60,35 @@
         </div>
     </section>
 
+    <section class="sevices" id="services">
+        <h2 class="heading">Our <span>Services</span></h2>
+
+        <div class="services-container">
+            <div class="services-box">
+                <i class='bx bx-code-alt' ></i>
+                <h3>Web Development</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    minus tenetur aspernatur corrupti sequi, repellat error debitis!</p>
+                <a href="#" class="btn">Read More</a>
+            </div>
+
+            <div class="services-box">
+                <i class='bx bxs-paint' ></i>
+                <h3>Graphic Design</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    minus tenetur aspernatur corrupti sequi, repellat error debitis!</p>
+                <a href="#" class="btn">Read More</a>
+            </div>
+
+            <div class="services-box">
+                <i class='bx bx-bar-chart-alt' ></i>
+                <h3>Digital Marketing</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    minus tenetur aspernatur corrupti sequi, repellat error debitis!</p>
+                <a href="#" class="btn">Read More</a>
+            </div>
+        </div>
+    </section>
     <script src="js/index.js"></script>
 </body>
 </html>
