css portfolio swiping effect

--- a/index.html
+++ b/index.html
@@ -89,6 +89,66 @@
             </div>
         </div>
     </section>
+
+    <section class="portfolio" id="portfolio">
+        <h2 class="heading">Latest <span>Project</span></h2>
+
+        <div class="portfolio-container">
+            <div class="portfolio-box">
+                <img src="https://www.number13.de/content/images/2021/08/photo-1542831371-29b0f74f9713-6.jpg" alt="codde">
+                <div class="portfolio-layer">
+                    <h4>Web Design</h4>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias, quae.</p>
+                    <a href="#"><i class='bx bx-link-external' ></i></a>
+                </div>
+            </div>
+
+            <div class="portfolio-box">
+                <img src="https://www.number13.de/content/images/2021/08/photo-1542831371-29b0f74f9713-6.jpg" alt="codde">
+                <div class="portfolio-layer">
+                    <h4>Web Design</h4>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias, quae.</p>
+                    <a href="#"><i class='bx bx-link-external' ></i></a>
+                </div>
+            </div>
+
+            <div class="portfolio-box">
+                <img src="https://www.number13.de/content/images/2021/08/photo-1542831371-29b0f74f9713-6.jpg" alt="codde">
+                <div class="portfolio-layer">
+                    <h4>Web Design</h4>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias, quae.</p>
+                    <a href="#"><i class='bx bx-link-external' ></i></a>
+                </div>
+            </div>
+
+            <div class="portfolio-box">
+                <img src="https://www.number13.de/content/images/2021/08/photo-1542831371-29b0f74f9713-6.jpg" alt="codde">
+                <div class="portfolio-layer">
+                    <h4>Web Design</h4>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias, quae.</p>
+                    <a href="#"><i class='bx bx-link-external' ></i></a>
+                </div>
+            </div>
+
+            <div class="portfolio-box">
+                <img src="https://www.number13.de/content/images/2021/08/photo-1542831371-29b0f74f9713-6.jpg" alt="codde">
+                <div class="portfolio-layer">
+                    <h4>Web Design</h4>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias, quae.</p>
+                    <a href="#"><i class='bx bx-link-external' ></i></a>
+                </div>
+            </div>
+
+            <div class="portfolio-box">
+                <img src="https://www.number13.de/content/images/2021/08/photo-1542831371-29b0f74f9713-6.jpg" alt="codde">
+                <div class="portfolio-layer">
+                    <h4>Web Design</h4>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias, quae.</p>
+                    <a href="#"><i class='bx bx-link-external' ></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="js/index.js"></script>
 </body>
 </html>
