--- a/index.html
+++ b/index.html
@@ -166,6 +166,18 @@
             <input type="submit" value="Send Message" class="btn">
         </form>
     </section>
+
+    <footer class="footer">
+        <div class="footer-text">
+            <p>Copyright &copy; 2023 by Adam Sadulaev | All Rights Reserved.</p>
+        </div>
+
+        <div class="footer-iconTop">
+            <a href="#home"><i class='bx bx-up-arrow-alt'></i></a>
+        </div>
+    </footer>
+
+
     <script src="js/index.js"></script>
 </body>
 </html>
