eding some js animation to content

--- a/index.html
+++ b/index.html
@@ -178,6 +178,8 @@
     </footer>
 
 
+    <script src="https://unpkg.com/scrollreveal"></script>
+
     <script src="js/index.js"></script>
 </body>
 </html>
