--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="home-content">
             <h3>Hello, It's Me</h3>
             <h1>Adam Sadulaev</h1>
-            <h3>And I'm a <span>Full Stack Developer</span></h3>
+            <h3>And I'm a <span class="multiple-text"></span></h3>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing 
                 elit. Quidem, consequuntur accusamus quas deleniti dolorum totam
                 libero id sit amet!</p>
@@ -178,7 +178,13 @@
     </footer>
 
 
+    <!-- scroll reveal -->
+
     <script src="https://unpkg.com/scrollreveal"></script>
+
+    <!-- typed js -->
+
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
 
     <script src="js/index.js"></script>
 </body>
